<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pick Point</string>
    <string name="address">Address:</string>
    <string name="change">Change</string>
    <string name="delivery">OK</string>
    <string name="receiving">Recieving</string>
    <string name="returning">Returning</string>
    <string name="reports">Reports</string>
    <string name="wrong_login">Wrong password</string>
    <string name="no_internet_connection">NO INTERNET CONNECTION</string>
    <string name="login">Enter password:</string>

    <string name="enter_code">Enter parcel code:</string>
    <string name="wrong_delivery_code">Wrong delivery code</string>
    <string name="price">Price</string>
    <string name="open">Open</string>

    <string name="price_details_paid">paied</string>
    <string name="price_details_notpaid">for payiment: </string>

    <string name="open_details_true">ordered to open</string>
    <string name="open_details_notpaid">not ordered to open</string>

    <string name="order">order</string>
    <string name="back">back</string>


    <!-- activity_pick_pointer_fio -->
    <string name="adm_enter_fio_msg">Enter full name (for administrator):</string>
    <string name="adm_enter_fio_surname">Surname:</string>
    <string name="adm_enter_fio_name">Name:</string>
    <string name="adm_enter_fio_secondname">Second name:</string>

    <string name="adm_enter_fio_button">Ok</string>


    <!-- activity_receiver_fio -->
    <string name="res_enter_fio_msg">Enter full name:</string>
    <string name="res_enter_fio_surname">Surname:</string>
    <string name="res_enter_fio_name">Name:</string>
    <string name="res_enter_fio_secondname">Second name:</string>

    <string name="res_confirm_msg">You agree to receive items (count):</string>
    <string name="res_count_msg"> </string>
    <string name="res_insert_signature">Signature: </string>

    <string name="res_erase_signature_button">Erase signature</string>
    <string name="res_confirm_signature_button">Accept</string>


    <!-- activity_login_head_piece -->
    <string name="enter_login_msg">Enter password:</string>
</resources>
