<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ParcelReceiverFIOActivity">

    <LinearLayout
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/insert_text_info"

            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:layout_marginTop="5dp"

            android:layout_width="wrap_content"

            android:textColor="#000000"


            android:text="@string/res_enter_fio_msg"
            android:layout_gravity="center"

            android:textAlignment="center"
            />
        <LinearLayout
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:gravity="center_vertical"
                android:textSize="8pt"
                android:text="@string/res_enter_fio_surname"/>
            <EditText
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_weight="2"
                android:layout_gravity="end"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:gravity="center_vertical"
                android:textSize="8pt"
                android:text="@string/res_enter_fio_name"/>
            <EditText
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_weight="2"
                android:layout_gravity="end"/>

        </LinearLayout>


        <LinearLayout
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal"
                >
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:gravity="center_vertical"
                android:textSize="8pt"
                android:text="@string/res_enter_fio_secondname"/>
            <EditText
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_weight="2"
                android:layout_gravity="end"/>

        </LinearLayout>



    </LinearLayout>


    <LinearLayout
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        >


        <LinearLayout
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_gravity="start"
                android:gravity="center_vertical"
                android:textSize="9pt"
                android:text="@string/res_confirm_msg"/>
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:gravity="center_vertical"
                android:textSize="9pt"
                android:text="@string/res_count_msg"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="start"
                android:gravity="center_vertical"
                android:textSize="8pt"
                android:text="@string/res_insert_signature"/>
            <EditText
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_weight="2"
                android:layout_gravity="end"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="335dp"
        android:layout_height="70dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="360dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/receiverSignatureAcceptButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="start"
            android:clickable="true"
            android:background="@color/colorPrimary"
            android:textSize="8pt"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:text="@string/res_confirm_signature_button"
            android:onClick="acceptResFIO"


            />
        <!--Button
            android:id="@+id/receiverSignatureEraseButton"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:layout_marginStart="20dp"
            android:clickable="true"
            android:background="@color/colorPrimary"
            android:textSize="8pt"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:text="@string/res_erase_signature_button"
            android:onClick="eraseSignature"
            /-->


    </LinearLayout>


</RelativeLayout>
